[gd_scene load_steps=11 format=3 uid="uid://bbaadw4233twe"]

[ext_resource type="Texture2D" uid="uid://bfddw2yslfdcf" path="res://img_misc/panelcontainer.png" id="1_iu6ji"]
[ext_resource type="Script" path="res://scene/upgrade_shop_subscene.gd" id="1_sx1y5"]
[ext_resource type="StyleBox" uid="uid://ca3h58dvds0ie" path="res://style.tres" id="2_y86us"]
[ext_resource type="Texture2D" uid="uid://28ordtdonqcu" path="res://img_misc/Illustration727vtran.png" id="3_7gucj"]
[ext_resource type="Texture2D" uid="uid://bxp84lcqp31ke" path="res://img_misc/castle.jpg" id="4_u0das"]
[ext_resource type="AudioStream" uid="uid://cjqlk5ewhigj3" path="res://sfx/money.ogg" id="5_6gc2v"]
[ext_resource type="AudioStream" uid="uid://eow2k4k8rjgc" path="res://sfx/woodknock.ogg" id="6_bb74v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uvb5l"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d7x8j"]
texture = ExtResource("1_iu6ji")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
modulate_color = Color(0.252028, 0.252028, 0.252028, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f5bdp"]
texture = ExtResource("1_iu6ji")
texture_margin_left = 11.0
texture_margin_top = 11.0
texture_margin_right = 11.0
texture_margin_bottom = 11.0
modulate_color = Color(0.986847, 0.956177, 0.963063, 1)

[node name="upgrade_shop_subscene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sx1y5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Choose Stage"
horizontal_alignment = 1

[node name="stage1" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "	Stage 1:
Vorath's First Steps"

[node name="stage2" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "	Stage 2:
Vorath's Feast"

[node name="stage3" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "	Stage 3:
Reckoning"

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_uvb5l")
theme_override_styles/hover = SubResource("StyleBoxTexture_d7x8j")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f5bdp")
theme_override_styles/normal = ExtResource("2_y86us")
text = "Back"

[node name="Illustration727Vtran" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(219, 112)
scale = Vector2(0.0473236, 0.0473236)
texture = ExtResource("3_7gucj")

[node name="Castle" type="Sprite2D" parent="."]
z_index = -7
position = Vector2(158, 117)
scale = Vector2(0.4975, 0.4975)
texture = ExtResource("4_u0das")

[node name="buy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6gc2v")
volume_db = -15.0
bus = &"SFX"

[node name="unableBuy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bb74v")
volume_db = -20.0
pitch_scale = 0.25
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/VBoxContainer/stage1" to="." method="_on_stage_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/stage2" to="." method="_on_stage_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/stage3" to="." method="_on_stage_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
